                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.0.5
  
  *) [TS-857] race condition UnixNetVConnection::do_io_close()

  *) [TS-1158] race condition UnixNetVConnection::mainEvent() when handling
     an inactivity timeout

  *) [TS-1114] crash from access to CacheVC::write_vector without vol lock.

Changes with Apache Traffic Server 3.0.4
  *) [TS-1154] quick_filter on HEAD does not work
   Author: weijin

  *) [TS-824] Range requests that result in cache refresh give 200 status
   response with full contents. Review and suggestions for improvements
   by Charlie Gero.

  *) [TS-880] Major performance problem with second request on same keep-alive connection
   Author: 	weijin

  *) [TS-1110] logstats incorrectly bucketizes all status codes greater 
  than 599 as 5xx
  
  *) [TS-1065] Traffic Cop: segment fault when TRACE_LOG_COP is enabled
   Author: Conan Wang

  *) [TS-948] do not reload bad remap.config

  *) [TS-845] make proxy.config.cluster.ethernet_interface default to
   loopback interface: lo on linux and lo0 on bsd derivatives

Changes with Apache Traffic Server 3.0.3

  *) [TS-876] forward map based on request receive port

  *) [TS-1004] Transformation plugins cause connection close when content
   length is not known ahead. Author: Otto van der Schaaf.

  *) [TS-1055]: Wrong implementation of TSHttpSsnArgGet().
    Author: Yakov Kopel

  *) [TS-1074] PluginVC should schedule to the local queue instead of the
  external queue.

  *) [TS-1066] TSHttpTxnServerReqHdrBytesGet in InkAPI.cc has an extra
   parameter (int *bytes) from the prototype in <ts/ts.h>.
   Author: Alistair Stevenson

  *) [TS-874] make asf-dist work with git repo

  *) [TS-1038] SHttpTxnErrorBodySet() can leak memory.

  *) [TS-1095] ts.h.in has incorrect declaration for TSFetchURL

  *) [TS-1014] slow log can not print logs well on 32-bit system,
  changed the %d to RPI64. Author: weijin.
