@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.0.5
-  
+  *) [TS-1185] fix build issues with clang
+
+  *) [TS-1116] fix build issues with gcc 4.7 
+ 
   *) [TS-857] race condition UnixNetVConnection::do_io_close()
 
   *) [TS-1158] race condition UnixNetVConnection::mainEvent() when handling
